--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.25)
 project(vulkan-compute-shader-test VERSION 0.0.1 LANGUAGES CXX)
 
 find_package(Vulkan REQUIRED)
+find_package(Vulkan COMPONENTS glslc)
+find_program(glslc_executable NAMES glslc HINTS Vulkan::glslc)
 find_package(glm REQUIRED)
 find_package(glfw3 3.3.2 REQUIRED)
 
@@ -19,4 +21,4 @@ target_link_libraries(compute-shader-test PUBLIC glfw)
 target_link_libraries(compute-shader-test PUBLIC glm::glm)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
-#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/shaders)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/shaders)
