--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.25)
 
-target_sources(compute-shader-test PRIVATE 
+add_subdirectory(compute_interface)
+
+target_sources(compute_shader_test PRIVATE 
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/binary_util.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/compute_interface.cpp
 )
-
-target_include_directories(compute-shader-test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(compute_shader_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(compute_shader_test PRIVATE compute_interface)
