--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,4 @@
 cmake_minimum_required(VERSION 3.25)
 
 add_subdirectory(compute_interface)
-
-target_sources(compute_shader_test PRIVATE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/binary_util.cpp
-)
-target_include_directories(compute_shader_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_subdirectory(binary_util)
