--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,19 +1,17 @@
 cmake_minimum_required(VERSION 3.25)
 
-add_executable(compute_shader_test
-    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
-)
-
-target_link_libraries(compute_shader_test PRIVATE compute_interface binary_util)
-
-target_compile_features(compute_shader_test PRIVATE cxx_std_20)
-target_compile_options(compute_shader_test PRIVATE -Wall -Wextra -Wswitch)
-
-target_link_libraries(compute_shader_test PUBLIC Vulkan::Vulkan)
-target_link_libraries(compute_shader_test PUBLIC glfw)
-target_link_libraries(compute_shader_test PUBLIC glm::glm)
-
 add_subdirectory(shaders)
 
+add_executable(compute_basic
+    ${CMAKE_CURRENT_SOURCE_DIR}/compute_basic.cpp
+)
+
+target_link_libraries(compute_basic PRIVATE compute_interface binary_util)
+
+target_compile_features(compute_basic PRIVATE cxx_std_20)
+target_compile_options(compute_basic PRIVATE -Wall -Wextra -Wswitch)
+target_link_libraries(compute_basic PUBLIC Vulkan::Vulkan)
+target_link_libraries(compute_basic PUBLIC glfw)
+target_link_libraries(compute_basic PUBLIC glm::glm)
 # Add the shader to the target
-add_dependencies(compute_shader_test compile_compute_shader)
+add_dependencies(compute_basic compute_basic_shader)
