rework descriptor sets and add compute_reduce example

--- a/examples/shaders/CMakeLists.txt
+++ b/examples/shaders/CMakeLists.txt
@@ -20,3 +20,9 @@ compile_shader(
     ${CMAKE_CURRENT_BINARY_DIR}/compute_basic_shader.spv
 )
 
+compile_shader(
+    compute_reduce_shader
+    ${CMAKE_CURRENT_SOURCE_DIR}/compute_reduce_shader.comp
+    ${CMAKE_CURRENT_BINARY_DIR}/compute_reduce_shader.spv
+)
+
