--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,4 @@ endfunction()
 create_test(test_sccl_instance ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_instance.cpp)
 create_test(test_sccl_device ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_device.cpp)
 create_test(test_sccl_buffer ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_buffer.cpp)
+create_test(test_sccl_stream ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_stream.cpp)
