--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,3 +27,5 @@ create_test(test_sccl_instance ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_instance.cp
 create_test(test_sccl_device ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_device.cpp)
 create_test(test_sccl_buffer ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_buffer.cpp)
 create_test(test_sccl_stream ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_stream.cpp)
+create_test(test_sccl_copy_buffer ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_copy_buffer.cpp)
+
