SCCL basic shaders
* Implemented basic shader creations, still need to support descriptor
  sets, spec constants and push constants.
* Added shaders to SCCL tests.
* Added `SCCL_TEST` prefix to sccl test env variables.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ find_program(glslc_executable NAMES glslc HINTS Vulkan::glslc)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+add_subdirectory(cmake)
+
 # clang-tidy
 set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-config-file=${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy")
 
