--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 
+add_subdirectory(shaders)
+
 add_custom_target(test_verbose COMMAND ${CMAKE_CTEST_COMMAND} "--output-on-failure")
 
 # So that GoogleTest does not get installed with this project
@@ -15,17 +17,30 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 include(GoogleTest)
 
-function(create_test test_name test_sources)
-    add_executable(${test_name} ${test_sources})
-    target_link_libraries(${test_name} PUBLIC gtest_main)
-    target_link_libraries(${test_name} PRIVATE sccl)
-    gtest_discover_tests(${test_name})
+function(create_test target)
+    # parse arguments
+    set(options "")
+    set(oneValueArgs "")
+    set(multiValueArgs SOURCES DEPENDS)
+    cmake_parse_arguments(CREATE_TEST "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
+    
+    # create test
+    add_executable(${target} ${CREATE_TEST_SOURCES})
+    target_link_libraries(${target} PUBLIC gtest_main)
+    target_link_libraries(${target} PRIVATE sccl)
+    target_compile_features(${target} PRIVATE cxx_std_20)
+    target_compile_options(${target} PRIVATE -Wall -Wextra -Wswitch)
+    if (CREATE_TEST_DEPENDS) # check if not empty
+        add_dependencies(${target} ${CREATE_TEST_DEPENDS})
+    endif()
+    gtest_discover_tests(${target})
 endfunction()
 
 # add tests
-create_test(test_sccl_instance ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_instance.cpp)
-create_test(test_sccl_device ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_device.cpp)
-create_test(test_sccl_buffer ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_buffer.cpp)
-create_test(test_sccl_stream ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_stream.cpp)
-create_test(test_sccl_copy_buffer ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_copy_buffer.cpp)
+create_test(test_sccl_instance SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_instance.cpp)
+create_test(test_sccl_device SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_device.cpp)
+create_test(test_sccl_buffer SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_buffer.cpp)
+create_test(test_sccl_stream SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_stream.cpp)
+create_test(test_sccl_copy_buffer SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_copy_buffer.cpp)
+create_test(test_sccl_shader SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test_sccl_shader.cpp DEPENDS noop_shader)
 
