--- a/src/sccl/CMakeLists.txt
+++ b/src/sccl/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(sccl
     ${CMAKE_CURRENT_SOURCE_DIR}/stream.c
     ${CMAKE_CURRENT_SOURCE_DIR}/shader.c
     ${CMAKE_CURRENT_SOURCE_DIR}/vector.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/error.c
 )
 target_compile_features(sccl PRIVATE c_std_17)
 target_compile_options(sccl PRIVATE -Wall -Wextra -Wswitch)
