Remove compute interface
* Directory src/compute_interface removed.
* All compute interface users converted to sccl.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(compute_basic
     ${CMAKE_CURRENT_SOURCE_DIR}/examples_common.cpp
 )
 target_include_directories(compute_basic PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(compute_basic PRIVATE sccl binary_util compute_interface)
+target_link_libraries(compute_basic PRIVATE sccl binary_util)
 target_compile_features(compute_basic PRIVATE cxx_std_20)
 target_compile_options(compute_basic PRIVATE -Wall -Wextra -Wswitch)
 target_link_libraries(compute_basic PUBLIC Vulkan::Vulkan)
@@ -18,7 +18,7 @@ add_executable(compute_reduce
     ${CMAKE_CURRENT_SOURCE_DIR}/examples_common.cpp
 )
 target_include_directories(compute_reduce PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(compute_reduce PRIVATE sccl compute_interface binary_util)
+target_link_libraries(compute_reduce PRIVATE sccl binary_util)
 target_compile_features(compute_reduce PRIVATE cxx_std_20)
 target_compile_options(compute_reduce PRIVATE -Wall -Wextra -Wswitch)
 target_link_libraries(compute_reduce PUBLIC Vulkan::Vulkan)
