--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_subdirectory(cmake)
 set(CMAKE_CXX_CLANG_TIDY "clang-tidy-15;-config-file=${CMAKE_CURRENT_SOURCE_DIR}/.clang-tidy")
 
 add_compile_options(-Wuninitialized -Werror -Wall)
-#add_compile_options(-fsanitize=address)
+#add_compile_options(-fsanitize=address -fno-omit-frame-pointer -g)
 #add_link_options(-fsanitize=address)
 
 add_subdirectory(src)
