--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -15,13 +15,13 @@ jobs:
         build_type: [Debug, Release]
         compiler: [gcc, clang]
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install Vulkan SDK
-      run: wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc && sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list https://packages.lunarg.com/vulkan/lunarg-vulkan-jammy.list && sudo apt-get -y update && sudo apt-get install -y vulkan-sdk mesa-utils mesa-vulkan-drivers libvulkan1 vulkan-tools vulkan-validationlayers clang
+    - name: Install Vulkan SDK and dependencies
+      run: wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc && sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list https://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list && sudo apt-get -y update && sudo apt-get install -y vulkan-sdk mesa-utils mesa-vulkan-drivers libvulkan1 vulkan-tools vulkan-validationlayers clang clang-tidy-19
 
     - name: Configure CMake gcc
       if: ${{matrix.compiler == 'gcc'}}
